--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --mode development",
-    "start:live": "webpack serve --mode development --live-reload --hot"
+    "start:live": "webpack serve --mode development --live-reload --hot",
+    "prepare": "husky install"
   },
   "license": "MIT",
   "author": {
     "name": "David Rivera",
     "email": "driveran2210@gmail.com"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -25,12 +37,21 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "prettier": "3.3.3",
+    "prettier-eslint": "^16.3.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "style-loader": "^3.3.0",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.15.0",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.3.1"
